fix spacing in header

--- a/src/components/GiftAidForm/GiftAidForm.scss
+++ b/src/components/GiftAidForm/GiftAidForm.scss
@@ -43,8 +43,28 @@ $colour-scorpion-grey: #595959;
     
     @include breakpoint($screen-md) {
       margin-bottom: 50px;
+      padding: 0 10%;
+    }
+    @include breakpoint($screen-lg) {
+      padding: 0 12%;
     }
   }
+
+  .giftaid-title {
+    margin: 0 auto 15px;
+    background: url($image-path + "gift-aid-logo.png") top center/100% no-repeat;
+    width: 100%;
+    height: 110px;
+    padding-top:35%; 
+  
+    @include breakpoint($screen-md) {
+      width: 395px;
+      height: 139px;
+      margin-bottom: 25px;
+      padding-top:18%; 
+    }
+  }
+  
 }
 
 .form__field-additional-text {
@@ -87,19 +107,6 @@ $colour-scorpion-grey: #595959;
       text-align: left;
       color: $colour-dove-grey;
     }
-  }
-}
-.giftaid-title {
-  margin: 0 auto 15px;
-  background: url($image-path + "gift-aid-logo.png") top center/100% no-repeat;
-  width: 100%;
-  height: 110px;
-  padding-top:35%; 
-
-  @include breakpoint($screen-md) {
-    width: 395px;
-    height: 139px;
-    margin-bottom: 25px;
   }
 }
 
